# webrtc-cam

./: .gitignore  shell.nix
camera/: Cargo.toml
camera/src/: main.rs  signaling.rs  signals.rs  webrtc.rs
interface/: index.html
signaling/: Cargo.toml
signaling/src/: lib.rs  main.rs  protocol.rs  rooms.rs  signals.rs  state.rs  tls.rs
