[package]
name = "device"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "*"
async-rustls = { version = "0.2", features = ["dangerous_configuration"] }
async-std = { version = "1.1", features = ["attributes", "unstable", "tokio1"]}
async-tungstenite = { version = "0.8", features = ["async-std-runtime"] }
bytes = "1.1"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
simple_logger = "2"
url = "2.2"
uuid = "0.8"
webrtc = "0.4"
opencv = "0.66"
