[package]
name = "signaling"
description = "A simple signaling server to connect webrtc peers"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
async-rustls = "0.2"
async-std = { version = "1.10", features = [ "attributes" ] }
async-sub = { git = "https://github.com/Hum-Systems/async-sub.git" }
async-broadcast = "0.3.4"
async-tungstenite = "0.15"
futures = "0.3"
simple_logger = "*"
log = "*"
rustls-acme = "0.2"
rustls = "0.19"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "*"
